hello-app/hello-app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app-deployment-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-app-v1
  template:
    metadata:
      labels:
        app: hello-app-v1
    spec:
      containers:
      - name: hello-app-v1
        image: us-docker.pkg.dev/google-samples/containers/gke/hello-app:1.0
        ports:
        - containerPort: 8080
        #securityContext:
        #  runAsUser: 2000
        #  allowPrivilegeEscalation: false

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app-deployment-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-app-v2
  template:
    metadata:
      labels:
        app: hello-app-v2
    spec:
      containers:
      - name: hello-app-v2
        image: us-docker.pkg.dev/google-samples/containers/gke/hello-app:2.0
        ports:
        - containerPort: 8080
        #securityContext:
        #  runAsUser: 2000
        #  allowPrivilegeEscalation: false
