hello-app/hello-app-lb.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-app-lb-v1
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: hello-app-v1

---
apiVersion: v1
kind: Service
metadata:
  name: hello-app-lb-v2
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: hello-app-v2
