hello-app/hello-app-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-app-ingress
spec:
  rules:
  - host: hello-app.sample.com
    http:
      paths: 
      - path: /v1
        backend:
          serviceName: hello-app-svc-v1
          servicePort: 80
      - path: /v2
        backend:
          serviceName: hello-app-svc-v2
          servicePort: 80
  tls:
  - hosts:
    - hello-app.sample.com
    secretName: hello-app-tls

---
apiVersion: v1
kind: Service
metadata:
  name: hello-app-svc-v1
spec:
  selector:
    app: hello-app-v1
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: hello-app-svc-v2
spec:
  selector:
    app: hello-app-v2
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
